Changelog for plone.app.kss

    (name of developer listed in brackets)

plone.app.kss - 1.4dev Unreleased

    - ...

plone.app.kss - 1.4.2 Released 2008-07-06

    - Make the plugin tolerant if jQuery is not present,
      and not have a "jq" reference error in this case.
      Previously any kss pages (for example, demos) that 
      did not use jQuery, failed with a javascript error
      in the presense of this plugin.
      During this, most things seemed to be working, 
      apart from any plugins that were missing because 
      they were to be loaded after the error.
      [ree]

plone.app.kss - 1.4.1 Released 2008-06-02

    - Made the kss.demo dependency optional.
      [hannosch]

plone.app.kss - 1.4 Released 2008-04-21

    - add selenium tests that at the moment are only
      runnable with a special branch of kss.demo,
      available from ploneout.
      [ree]

plone.app.kss - 1.4-rc1 Released 2008-03-25

    - use refreshViewlet instead of macroContent in subscribers
      (closes #7879)
      [gotcha)

plone.app.kss - 1.4-alpha1 Released 2008-03-09

   - Prepare for release
     [ree]

plone.app.kss - 1.2.5 Released 2008-01-03

plone.app.kss - 1.2.4 Released 2007-12-06

plone.app.kss - 1.2.3 Released 2007-11-08

    - various fixes
      [ree]

plone.app.kss - 1.2.2 Released 2007-10-06

    - Change workflow permissions to zope2.View, this almost matches
	  WorkflowTool.doActionFor which is declared public. Security checking is
	  performed explicitly inside DCWorkflow for transitions.
	  [ldr]
	
	- Make content tabs re-render on a workflow change. Workflows often change
	  the cmf.ModifyPortalContent permissions, making the edit tab inaccessible.
	  [ldr]

plone.app.kss - 1.2.1 Released 2007-09-10

    - various fixes
      [ldr]

plone.app.kss - 1.2 Released 2007-08-17

    - Fix bugs and test layer
      [ree, gotcha, jvloothuis, nouri]

plone.app.kss - 1.2-rc2 Released 2007-07-27

    - External links is not always loaded anymore