@@ -5,14 +5,14 @@ from kss.core import CommandSet
 from plone.app.layout.globals.interfaces import IViewView
 from zope.contentprovider.interfaces import IContentProvider
 
-# XXX: This is deprecated and will be removed in Plone 3.5. Use the 'plone'
+# XXX: This is deprecated and will be removed in Plone 4.0. Use the 'plone'
 # command set instead.
 class KSSRefreshContentMenu(CommandSet):
     """
     Refresh a viewlet
     """
 
-    @deprecate("The 'contentmenu' command set is deprecated and will be removed in Plone 3.5. "
+    @deprecate("The 'contentmenu' command set is deprecated and will be removed in Plone 4.0. "
               "Please use the 'plone' command set instead.")
     def refreshContentMenu(self, id, name):
         alsoProvides(self.view, IViewView)
